[package]
authors = ["Luca Bruno <lucab@lucabruno.net>"]
description = "A pure-Rust library to interact with systemd DBus services"
documentation = "https://docs.rs/zbus_systemd"
edition = "2021"
exclude = [".gitignore", "codegen", "justfile"]
keywords = ["dbus", "systemd", "Linux", "zbus", "async"]
license = "MIT/Apache-2.0"
name = "zbus_systemd"
repository = "https://github.com/lucab/zbus_systemd"
version = "0.0.14"
rust-version = "1.75.0"

[dependencies]
futures = "0.3"
serde = "1"
zbus = "4.0"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

[features]
home1 = []
hostname1 = []
import1 = []
locale1 = []
login1 = []
machine1 = []
network1 = []
oom1 = []
portable1 = []
resolve1 = []
systemd1 = []
timedate1 = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
