[package]
authors = ["Luca Bruno <lucab@lucabruno.net>"]
description = "A pure-Rust library to interact with systemd DBus services"
documentation = "https://docs.rs/zbus_systemd"
edition = "2021"
exclude = [".gitignore", "codegen", "justfile"]
keywords = ["dbus", "systemd", "Linux", "zbus", "async"]
license = "MIT/Apache-2.0"
name = "zbus_systemd"
repository = "https://github.com/lucab/zbus_systemd"
version = "0.25901.0"
rust-version = "1.87.0"

[dependencies]
serde = "1"
zbus = { version = "5.3", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
home1 = []
hostname1 = []
import1 = []
locale1 = []
login1 = []
machine1 = []
network1 = []
oom1 = []
portable1 = []
resolve1 = []
systemd1 = []
sysupdate1 = []
timedate1 = []
timesync1 = []
zbus-async-smol = ["zbus/async-io"]
zbus-async-tokio = ["zbus/tokio"]

[[example]]
name = "login1-session_lock-unlock"
required-features = ["login1", "zbus-async-tokio"]

[[example]]
name = "login1-wall_message"
required-features = ["login1", "zbus-async-tokio"]

[[example]]
name = "systemd1-get_default_target"
required-features = ["systemd1", "zbus-async-tokio"]

[[example]]
name = "timedate1-list_timezones"
required-features = ["timedate1", "zbus-async-tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
